--- a/src/gui/EditorWindow/TimelinePanel/TimelinePanel.axaml
+++ b/src/gui/EditorWindow/TimelinePanel/TimelinePanel.axaml
@@ -791,6 +791,7 @@
 
   </UserControl.DataTemplates>
 
+<Grid>
   <DockPanel DataContext="{Binding TimelineContent}">
     <DockPanel DockPanel.Dock="Top">
       <StackPanel Orientation="Horizontal" DockPanel.Dock="Left">
@@ -923,7 +924,8 @@
         <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Hidden" Offset="{Binding $parent[views:TimelinePanel].VPos, Mode=TwoWay}" Margin="0,0,0,16" PointerPressed="LogPosition">
           <ScrollViewer.ContextMenu>
             <ContextMenu IsEnabled="{Binding !$parent[views:TimelinePanel]((vm:TimelinePanelViewModel)DataContext).Config.ReadOnly}">
-              <MenuItem Header="New" />
+              <!--MenuItem Header="New" Click="NewCommand" /-->
+              <MenuItem Header="New" Click="OpenModal" />
               <MenuItem Header="Paste" Click="PasteCommand" IsEnabled="{Binding $parent[views:TimelinePanel]((vm:TimelinePanelViewModel)DataContext).HasCopiedCommand}" />
             </ContextMenu>
           </ScrollViewer.ContextMenu> 
@@ -994,5 +996,40 @@
       </ScrollViewer>
     </Grid>
   </DockPanel>
+  <DockPanel Background="{DynamicResource SystemControlPageBackgroundMediumAltMediumBrush}" IsVisible="{Binding $parent[views:TimelinePanel].ModalIsOpen}">
+    <Border
+     Background="{DynamicResource SystemChromeMediumLowColor}"
+     BorderThickness="5"
+     CornerRadius="5"
+     HorizontalAlignment="Center"
+     Padding="10"
+     VerticalAlignment="Center">
+    <StackPanel
+     HorizontalAlignment="Center"
+     Spacing="10"
+     VerticalAlignment="Center">
+      <Button Classes="popupclose" Click="CloseModal" HorizontalAlignment="Right">
+        <PathIcon Data="{StaticResource dismiss_regular}" />
+      </Button>
+      <TextBlock Classes="formtitle" Text="Add New Command"/>
+      <Separator Classes="formtitle"/>
+      <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Spacing="5">
+      <ComboBox
+       HorizontalAlignment="Center"
+       ItemsSource="{Binding AddableCodes}"
+       SelectedItem="{Binding $parent[views:TimelinePanel].AddCode}"
+       IsEnabled="{Binding !Config.ReadOnly}"
+       MinWidth="100"
+       MaxDropDownHeight="300"/>
+      <Button Click="NewCommand"
+       HorizontalAlignment="Center"
+       IsEnabled="{Binding $parent[views:TimelinePanel].AddCodeIsSelected}">
+        Add
+      </Button>
+      </StackPanel>
+    </StackPanel>
+    </Border>
+  </DockPanel>
+</Grid>
 
 </rxui:ReactiveUserControl>
