--- a/src/gui/EditorWindow/TimelinePanel/TimelinePanel.axaml
+++ b/src/gui/EditorWindow/TimelinePanel/TimelinePanel.axaml
@@ -923,6 +923,19 @@
         <Button Click="HideAllCategories" CornerRadius="0,5,5,0">Hide All</Button>
       </StackPanel>
       <StackPanel Classes="field" DockPanel.Dock="Right">
+        <Button ToolTip.Tip="Frame Settings">
+          <Button.Flyout>
+            <Flyout> <!--Opening="LoadModelInScene" Closed="ClearScene"-->
+              <StackPanel Classes="form">
+	            <TextBlock Classes="formtitle" Text="Frame Settings"/>
+                <Separator Classes="formtitle"/>
+                <ContentControl Content="{Binding FrameRate}"/>
+                <ContentControl Content="{Binding FrameDuration}"/>
+              </StackPanel>
+            </Flyout>
+          </Button.Flyout>
+          <PathIcon Data="{StaticResource settings_regular}" />
+        </Button>
         <Slider
          Minimum="0"
          Maximum="{c:Binding FrameCount-1}"
