--- a/src/gui/EditorWindow/AssetsPanel/AssetsPanel.axaml
+++ b/src/gui/EditorWindow/AssetsPanel/AssetsPanel.axaml
@@ -129,6 +129,11 @@
       <Setter Property="FontWeight" Value="ExtraLight"/>
       <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
+    <Style Selector="Button.action">
+      <Setter Property="Height" Value="32"/>
+      <Setter Property="HorizontalAlignment" Value="Center"/>
+      <Setter Property="Width" Value="32"/>
+    </Style>
   </UserControl.Styles>
 
   <UserControl.DataTemplates>
@@ -229,8 +234,96 @@
 
   </UserControl.DataTemplates>
 
-  <StackPanel>
-    <TextBlock Text="This is the assets tab."/>
-  </StackPanel>
+  <ScrollViewer>
+  <DockPanel>
+    <ItemsControl ItemsSource="{Binding Assets}">
+      <ItemsControl.Styles>
+        <Style Selector="ItemsControl > ContentPresenter:nth-child(even) > Border.asset">
+          <Setter Property="Background" Value="{DynamicResource SystemControlBackgroundChromeMediumLowBrush}"/>
+        </Style>
+        <Style Selector="ItemsControl > ContentPresenter:nth-child(odd) > Border.asset">
+          <Setter Property="Background" Value="{DynamicResource SystemListLowColor}"/>
+        </Style>
+        <Style Selector="Border.asset:pointerover">
+          <Setter Property="Background" Value="{DynamicResource SystemListMediumColor}"/>
+        </Style>
+        <Style Selector="Border.asset:pointerover TextBlock.assettitle">
+          <Setter Property="Foreground" Value="{DynamicResource SystemAccentColor}"/>
+        </Style>
+      </ItemsControl.Styles>
+      <ItemsControl.ItemsPanel>
+        <ItemsPanelTemplate>
+          <StackPanel Orientation="Vertical" Spacing="5" Margin="0,0,40,0"/>
+        </ItemsPanelTemplate> 
+      </ItemsControl.ItemsPanel>
+      <ItemsControl.ItemTemplate>
+        <DataTemplate>
+          <Border Classes="asset" CornerRadius="5">
+            <DockPanel>
+              <TextBlock Text="{Binding ObjectID.Value}"
+               Classes="assettitle"
+               FontSize="18"
+               Foreground="{DynamicResource SystemBaseMediumColor}"
+               HorizontalAlignment="Center"
+               VerticalAlignment="Center"
+               TextAlignment="Center"
+               DockPanel.Dock="Left"
+               Width="60"
+               Margin="10"/>
+              <Rectangle
+               Fill="{DynamicResource SystemControlPageBackgroundMediumAltMediumBrush}"
+               Width="5"
+               VerticalAlignment="Stretch"/>
+              <StackPanel DockPanel.Dock="Right" Spacing="5" Margin="5">
+                <Button Classes="action" ToolTip.Tip="Edit">
+                  <Button.Flyout>
+                    <Flyout>
+                      <StackPanel Classes="form">
+
+                        <TextBlock Classes="formtitle" Text="Asset"/>
+                        <Separator Classes="formtitle"/>
+                        <ContentControl Content="{Binding ObjectID}"/>
+                        <ContentControl Content="{Binding UniqueID}"/>
+
+                        <TextBlock Classes="formsubtitle" Text="Resource"/>
+                        <Separator Classes="formsubtitle"/>
+                        <ContentControl Content="{Binding ObjectType}"/>
+                        <ContentControl Content="{Binding Category}"/>
+                        <ContentControl Content="{Binding MajorID}"/>
+                        <ContentControl Content="{Binding MinorID}"/>
+                        <ContentControl Content="{Binding SubID}"/>
+
+                        <TextBlock Classes="formsubtitle" Text="Animations"/>
+                        <Separator Classes="formsubtitle"/>
+                        <ContentControl Content="{Binding IsCommon}"/>
+                        <ContentControl Content="{Binding BaseAnimID}"/>
+                        <ContentControl Content="{Binding ExtBaseAnimID}"/>
+                        <ContentControl Content="{Binding ExtAddAnimID}"/>
+
+                        <TextBlock Classes="formsubtitle" Text="Other Flags"/>
+                        <Separator Classes="formsubtitle"/>
+                        <ContentControl Content="{Binding UnkFlag1}"/>
+                        <ContentControl Content="{Binding UnkFlag2}"/>
+
+                      </StackPanel>
+                    </Flyout>
+                  </Button.Flyout>
+                  <PathIcon Data="{StaticResource edit_regular}" />
+                </Button>
+                <Button Classes="action" ToolTip.Tip="Preview">
+                  <PathIcon Data="{StaticResource eye_show_regular}" />
+                </Button>
+                <Button Classes="action" ToolTip.Tip="Delete">
+                  <PathIcon Data="{StaticResource delete_regular}" />
+                </Button>
+              </StackPanel>
+              <Panel/>
+            </DockPanel>
+          </Border>
+        </DataTemplate>
+      </ItemsControl.ItemTemplate>
+    </ItemsControl>
+  </DockPanel>
+  </ScrollViewer>
 
 </rxui:ReactiveUserControl>
