Enable splash menu movement + multiple open events

--- a/src/gui/MainWindow/LandingPage/LandingPage.axaml
+++ b/src/gui/MainWindow/LandingPage/LandingPage.axaml
@@ -24,7 +24,7 @@
     </Style>
   </UserControl.Styles>
 
-  <StackPanel Background="Black">
+  <StackPanel Background="Black" PointerPressed="StartDragLauncher" PointerMoved="DragLauncher" PointerReleased="StopDragLauncher">
     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
       <Panel Classes="config" PointerReleased="NewProjectClicked">
         <PathIcon Data="{StaticResource folder_add_regular}" ToolTip.Tip="Create New Project"/>
