--- a/src/gui/EditorWindow/TimelinePanel/TimelinePanel.axaml
+++ b/src/gui/EditorWindow/TimelinePanel/TimelinePanel.axaml
@@ -12,6 +12,21 @@
              x:Class="EVTUI.Views.TimelinePanel"
              x:TypeArguments="vm:TimelinePanelViewModel">
 
+  <UserControl.Resources>
+    <ResourceDictionary>
+      <ResourceDictionary.ThemeDictionaries>
+        <ResourceDictionary x:Key='Light'>
+          <SolidColorBrush x:Key='SystemAccentColorTheme1' Color="{DynamicResource SystemAccentColorLight1}"/>
+          <SolidColorBrush x:Key='SystemAccentColorTheme2' Color="{DynamicResource SystemAccentColorLight2}"/>
+        </ResourceDictionary>
+        <ResourceDictionary x:Key='Dark'>
+          <SolidColorBrush x:Key='SystemAccentColorTheme1' Color="{DynamicResource SystemAccentColorDark1}"/>
+          <SolidColorBrush x:Key='SystemAccentColorTheme2' Color="{DynamicResource SystemAccentColorDark2}"/>
+        </ResourceDictionary>
+      </ResourceDictionary.ThemeDictionaries>
+    </ResourceDictionary>
+  </UserControl.Resources>
+
   <UserControl.Styles>
     <Style Selector="Separator.formtitle">
       <Setter Property="Background" Value="{DynamicResource SystemAccentColor}"/>
@@ -101,7 +116,7 @@
     <!-- CONTAINER TYPES -->
 
     <DataTemplate DataType="{x:Type vm:Frame}">
-      <Border CornerRadius="5,5,0,0" Classes.inactive="{Binding !IsInPlayRange}">
+      <Border CornerRadius="5,5,0,0" Classes.inactive="{Binding !IsInPlayRange}" Classes.marked="{Binding IsMarked}" PointerReleased="ToggleMarker">
       <StackPanel Width="80" Orientation="Vertical">
         <TextBlock Text="{Binding Index}"
          FontSize="18"
@@ -918,10 +933,10 @@
   <DockPanel DataContext="{Binding TimelineContent}">
     <DockPanel DockPanel.Dock="Top">
       <StackPanel Orientation="Horizontal" DockPanel.Dock="Left">
-        <Button Name="ShowCategories" Click="ShowAllCategories" CornerRadius="5,0,0,5" Background="{DynamicResource SystemAccentColor}">
+        <Button Name="ShowCategories" Click="ShowAllCategories" CornerRadius="5,0,0,5" Background="{DynamicResource SystemAccentColorTheme1}">
           <Button.Styles>
             <Style Selector="Button#ShowCategories:pointerover ContentPresenter">
-              <Setter Property="Background" Value="{DynamicResource SystemAccentColorDark1}"/>
+              <Setter Property="Background" Value="{DynamicResource SystemAccentColorTheme2}"/>
             </Style>
           </Button.Styles>
           Show All
@@ -937,7 +952,12 @@
                 <Separator Classes="formtitle"/>
                 <ContentControl Content="{Binding FrameRate}"/>
                 <ContentControl Content="{Binding FrameDuration}"/>
-                <ContentControl Content="{Binding StartingFrameEntry}"/>
+                <Expander Header="In-Editor Playback">
+                  <StackPanel Classes="form">
+                    <ContentControl Content="{Binding StartingFrameEnabled}"/>
+                    <ContentControl Content="{Binding StartingFrameEntry}" IsVisible="{Binding StartingFrameEnabled.Value}"/>
+                  </StackPanel>
+                </Expander>
               </StackPanel>
             </Flyout>
           </Button.Flyout>
@@ -970,6 +990,12 @@
             </Style>
             <Style Selector="ItemsControl > ContentPresenter:pointerover > Border">
               <Setter Property="Background" Value="{DynamicResource SystemListMediumColor}"/>
+            </Style>
+            <Style Selector="ItemsControl > ContentPresenter > Border.marked">
+              <Setter Property="Background" Value="{DynamicResource SystemAccentColorTheme1}"/>
+            </Style>
+            <Style Selector="ItemsControl > ContentPresenter:pointerover > Border.marked">
+              <Setter Property="Background" Value="{DynamicResource SystemAccentColorTheme2}"/>
             </Style>
             <Style Selector="ItemsControl > ContentPresenter:pointerover > Border > StackPanel > TextBlock">
               <Setter Property="Foreground" Value="{DynamicResource SystemAccentColor}"/>
@@ -1119,10 +1145,10 @@
                           </Style>
                         </Button.Styles>
                         <Button.ContextMenu>
-                          <ContextMenu IsEnabled="{Binding !$parent[views:TimelinePanel]((vm:TimelinePanelViewModel)DataContext).Config.ReadOnly}">
-                            <MenuItem Header="Cut"    Click="CutCommand"    />
-                            <MenuItem Header="Copy"   Click="CopyCommand"   />
-                            <MenuItem Header="Delete" Click="DeleteCommand" />
+                          <ContextMenu> <!--IsEnabled="{Binding !$parent[views:TimelinePanel]((vm:TimelinePanelViewModel)DataContext).Config.ReadOnly}"-->
+                            <MenuItem Header="Cut" Click="CutCommand"/>
+                            <MenuItem Header="Copy" Click="CopyCommand" IsEnabled="{Binding !$parent[views:TimelinePanel]((vm:TimelinePanelViewModel)DataContext).Config.ReadOnly}"/>
+                            <MenuItem Header="Delete" Click="DeleteCommand" IsEnabled="{Binding !$parent[views:TimelinePanel]((vm:TimelinePanelViewModel)DataContext).Config.ReadOnly}"/>
                           </ContextMenu>
                         </Button.ContextMenu> 
                         <TextBlock Text="{Binding Code}"
